# Blobe

./: .gitignore  Cargo.toml  README.md
images/: instance-impl-new.drawio
instances/default/: README.md  config.toml
instances/default/public/: index.html  style.css
src/: instance.rs  main.rs
src/blobe/: instance.rs  mod.rs  server.rs
temp/: history
