[package]
name = "blobe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"
actix-files = "0.5.0"
rustyline = "8.2.0"
rustyline-derive = "0.4.0"
git2 = "0.13.20"